--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ qt_add_executable(subdivision_shading WIN32 MACOSX_BUNDLE
     subdivision/subdivider.h
     util/util.h util/util.cpp
     resources.qrc
+    subdivisionshadertype.h
+
 )
 target_link_libraries(subdivision_shading PRIVATE
     Qt::Core
